# labs-project-stuffs

1/: CMakeLists.txt  README.md  main.cpp
2/: .clang-format  CMakeLists.txt  README.md
2/src/: converter.cpp  converter.hpp  main.cpp  ui.cpp  ui.hpp
2/src2/: converter.cpp
3/: .gitignore  CMakeLists.txt  README.md
3/src/: bignum.cpp  bignum.hpp  generator.cpp  generator.hpp  main.cpp
